// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bold lex("**a
b**") .render() 1`] = `
"[b]a
b[/b]"
`;

exports[`Bold lex("**a
b**") .tokens 1`] = `
[
  Text {
    "content": "a
b",
    "literal": "a
b",
    "scope": "inline",
  },
]
`;

exports[`Bold lex("**a*b**") .render() 1`] = `"[b]a*b[/b]"`;

exports[`Bold lex("**a*b**") .tokens 1`] = `
[
  Text {
    "content": "a*b",
    "literal": "a*b",
    "scope": "inline",
  },
]
`;

exports[`Bold lex("**foo \\*\\* bar**") .render() 1`] = `"[b]foo ** bar[/b]"`;

exports[`Bold lex("**foo \\*\\* bar**") .tokens 1`] = `
[
  Text {
    "content": "foo \\*\\* bar",
    "literal": "foo \\*\\* bar",
    "scope": "inline",
  },
]
`;

exports[`Bold lex("**foo** bar") .render() 1`] = `"[b]foo[/b]"`;

exports[`Bold lex("**foo** bar") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Bold lex("**foo**") .render() 1`] = `"[b]foo[/b]"`;

exports[`Bold lex("**foo**") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;
